@@ -3,7 +3,7 @@ package com.ximuyi.demo.vmoption;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.sql.Time;
+import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -16,7 +16,8 @@ public class VMOptions {
 		//recursion(0, 0);
 		//recursion(new RcursionValue());
 		//GC0();
-		GC1();
+		//GC1();
+		GC2();
 	}
 
 	/**
@@ -33,6 +34,18 @@ public class VMOptions {
 	 * -XX:-EliminateAllocations （不）做标量分析，-号表示取反，否定的意思；
 	 * -XX:-UseTLAB （不）使用线程本地缓存
 	 *
+	 * 使用CMS
+	 * -XX:+ExplicitGCInvokesConcurrent
+	 * -XX:+UseConcMarkSweepGC
+	 * -XX:+UseParNewGC
+	 * -XX:+CMSParallelRemarkEnabled
+	 * -XX:+UseCMSCompactAtFullCollection
+	 * -XX:CMSFullGCsBeforeCompaction=0
+	 *
+	 *
+	 *使用户G1
+	 * -XX:+UseG1GC
+	 * -XX:MaxGCPauseMillis=200
 	 */
 	private static void GC0(){
 		List<Object> objects = new ArrayList<>();
@@ -46,10 +59,47 @@ public class VMOptions {
 		List<byte[]> valueIds = new ArrayList<>();
 		for (int i = 0; i < 10000000; i++) {
 			valueIds.add(new byte[size]);
-			if (valueIds.size() == 1){
+			if (valueIds.size() == 500){
 				valueIds.clear();
 			}
 			TimeUnit.MILLISECONDS.sleep(10);
+		}
+	}
+
+	/***
+	 * 直接调用System.gc()并没有触发CMS 或者 G1 的FullGC回收，而是：
+	 * 22.779: [Full GC (System.gc())  3763K->3762K(13M), 0.0254907 secs]
+	 *    [Eden: 1024.0K(6144.0K)->0.0B(6144.0K) Survivors: 0.0B->0.0B Heap: 3763.8K(13.0M)->3762.6K(13.0M)], [Metaspace: 12088K->12088K(1060864K)]
+	 *  [Times: user=0.02 sys=0.00, real=0.03 secs]
+	 * 24.807: [Full GC (System.gc())  3763K->3762K(13M), 0.0203081 secs]
+	 *    [Eden: 1024.0K(6144.0K)->0.0B(6144.0K) Survivors: 0.0B->0.0B Heap: 3763.8K(13.0M)->3762.6K(13.0M)], [Metaspace: 12088K->12088K(1060864K)]
+	 *  [Times: user=0.06 sys=0.00, real=0.02 secs]
+	 *
+	 *  应该使用 -XX:+ExplicitGCInvokesConcurrent
+	 * @throws InterruptedException
+	 */
+	private static void GC2() throws InterruptedException {
+		for (int i = 0; i < 1000; i++) {
+			if (i % 10 == 0){
+				logger.debug("---------SystemSystem.gc()");
+				System.gc();
+				TimeUnit.SECONDS.sleep(10);
+			}
+			else {
+				/***
+				 * 使用1.8版本，注释以下代码之后依然会触发FulGC
+				 * 90.367: [Full GC (System.gc())  3761K->3761K(13M), 0.0242376 secs]
+				 *    [Eden: 0.0B(6144.0K)->0.0B(6144.0K) Survivors: 0.0B->0.0B Heap: 3761.9K(13.0M)->3761.9K(13.0M)], [Metaspace: 12098K->12098K(1060864K)]
+				 *  [Times: user=0.02 sys=0.00, real=0.02 secs]
+				 * 92.392: [Full GC (System.gc())  3761K->3761K(13M), 0.0212757 secs]
+				 *    [Eden: 0.0B(6144.0K)->0.0B(6144.0K) Survivors: 0.0B->0.0B Heap: 3761.9K(13.0M)->3761.9K(13.0M)], [Metaspace: 12098K->12098K(1060864K)]
+				 *  [Times: user=0.02 sys=0.00, real=0.02 secs]
+				 * 94.413: [Full GC (System.gc())  3762K->3761K(13M), 0.0274091 secs]
+				 *    [Eden: 1024.0K(6144.0K)->0.0B(6144.0K) Survivors: 0.0B->0.0B Heap: 3762.6K(13.0M)->3761.9K(13.0M)], [Metaspace: 12098K->12098K(1060864K)]
+				 *  [Times: user=0.02 sys=0.00, real=0.03 secs]
+				 */
+				ByteBuffer.allocateDirect(1024*1024);
+			}
 		}
 	}
 
